added proizvodi i katalozi pages

--- a/src/html/modules/banner/banner.hbs
+++ b/src/html/modules/banner/banner.hbs
@@ -1,4 +1,4 @@
-<div class="banner {{altClass}}">
+<div class="banner">
 	<h1 class="sr-only">{{title}}</h1>
 	<div class="banner__slider js-slider">
 		{{#each slide}}
