--- a/src/html/shared/footer/footer.hbs
+++ b/src/html/shared/footer/footer.hbs
@@ -3,24 +3,26 @@
     <div class="wrap">
         <div class="footer-wrap">
             <div class="footer-box">
+                <h5>Kontakt mail i telefon</h5>
+                <span><a class="icon-ico-email" href="mailto:virtuszemun@gmail.com">virtuszemun@gmail.com</a></span>
+                <span><a class="icon-ico-pin" href="tel:+38160123456">060/123-456</a></span>
+            </div>
+            <div class="footer-box">
+                <h5>Adresa</h5>
+                <span>Beograd, Ulica ulica br. 15</span>
+            </div>
+            <div class="footer-box">
                 <h5>Radno vreme</h5>
                 <span>pondedeljak - petak</span>
                 <span>07:00 – 23:00</span>
                 <span>subota - nedelja</span>
                 <span>08:00 – 24:00</span>
             </div>
-            <div class="footer-box">
-                <h5>Adresa</h5>
-                <span>Sremska Mitrovica, Svetog Save br. 15</span>
-            </div>
-            <div class="footer-box">
-                <h5>Kontakt mail i telefon</h5>
-                <a href="mailto:lanostracasa.sm@gmail.com">lanostracasa.sm@gmail.com</a>
-                <a href="tel:+38163405403">063/405-403</a>
-            </div>
             <div class="social-media">
-                <a target="_blank" href="javascript:;" aria-label="Link do Facebook stranice" class="font-ico-facebook"></a>
-                <a target="_blank" href="javascript:;" aria-label="Link do Instagram stranice" class="font-ico-instagram"></a>
+                <a target="_blank" href="javascript:;" aria-label="Link do Facebook stranice"
+                    class="font-ico-facebook"></a>
+                <a target="_blank" href="javascript:;" aria-label="Link do Instagram stranice"
+                    class="font-ico-instagram"></a>
             </div>
         </div>
     </div>
