--- a/src/html/shared/master/master.hbs
+++ b/src/html/shared/master/master.hbs
@@ -6,7 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="format-detection" content="telephone=no">
 	<meta charset="utf-8">
+	<meta name="author" content="Marina Tatic">
 	<meta name="description" content="">
+	<meta name="keywords" content="">
+	<meta name="theme-color" content="#f26722">
+	<link rel="canonical" href="http://lanostracasa.rs">
 
 	{{#if production}}
 	<link rel="preconnect" href="https://www.googletagmanager.com">
@@ -32,10 +36,7 @@
 	<!-- End Google Tag Manager -->
 	{{/if}}
 
-	<!-- global js file -->
-	<script defer type="text/javascript" src="js/global.min.js"></script>
-
-	<title>Front-end HBS Starter</title>
+	<title>Virtus Zemun</title>
 	<link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
@@ -57,6 +58,8 @@
 
 	{{#> template-content}}
 	{{/template-content}}
+	<!-- global js file -->
+	<script src="js/global.min.js"></script>
 </body>
 
 </html>
