--- a/src/html/templates/katalozi/template.hbs
+++ b/src/html/templates/katalozi/template.hbs
@@ -3,7 +3,9 @@
 
 		{{> header header}}
 
-		{{> team-list teamList}}
+		{{> banner banner}}
+
+		{{> companies companies}}
 
 		{{> footer footer}}
 
