--- a/src/html/templates/proizvodi/template.hbs
+++ b/src/html/templates/proizvodi/template.hbs
@@ -3,7 +3,9 @@
 
 		{{> header header}}
 
-		{{> basic-block basicBlock }}
+		{{> banner banner}}
+
+		{{> companies companies}}
 
 		{{> footer footer}}
 
