--- a/src/scss/modules/_banner.scss
+++ b/src/scss/modules/_banner.scss
@@ -1,8 +1,8 @@
 //----------  banner
 //------------------------------------------------------------------------------
 .banner {
-	margin-bottom: 20px;
 	min-height: 100vh;
+	border-bottom: 3px solid $orange;
 }
 
 .banner__content {
