--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -7,6 +7,7 @@
         url('../assets/fonts/Roboto-MediumItalic.ttf') format('truetype');
     font-weight: 500;
     font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
@@ -16,6 +17,7 @@
         url('../assets/fonts/Roboto-BoldItalic.ttf') format('truetype');
     font-weight: bold;
     font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
@@ -25,6 +27,7 @@
         url('../assets/fonts/Roboto-Black.ttf') format('truetype');
     font-weight: 900;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -34,6 +37,7 @@
         url('../assets/fonts/Roboto-ThinItalic.ttf') format('truetype');
     font-weight: 100;
     font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
@@ -43,6 +47,7 @@
         url('../assets/fonts/Roboto-LightItalic.ttf') format('truetype');
     font-weight: 300;
     font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
@@ -52,6 +57,7 @@
         url('../assets/fonts/Roboto-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -61,6 +67,7 @@
         url('../assets/fonts/Roboto-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -70,6 +77,7 @@
         url('../assets/fonts/Roboto-Light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -79,6 +87,7 @@
         url('../assets/fonts/Roboto-BlackItalic.ttf') format('truetype');
     font-weight: 900;
     font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
@@ -88,6 +97,7 @@
         url('../assets/fonts/Roboto-Italic.ttf') format('truetype');
     font-weight: normal;
     font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
@@ -97,6 +107,7 @@
         url('../assets/fonts/Roboto-Thin.ttf') format('truetype');
     font-weight: 100;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -106,5 +117,6 @@
         url('../assets/fonts/Roboto-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
+    font-display: swap;
 }
 
