--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -7,6 +7,18 @@ body {
 	font-size: 14px;
 }
 
+.section {
+	padding: 50px 0 70px;
+
+	@include breakpoint(tablet) {
+		padding: 30px 0 50px;
+	}
+
+	@include breakpoint(phone) {
+		padding: 30px 0 50px;
+	}
+}
+
 .wrap {
 	margin: 0 auto;
 	max-width: 1280px;
