--- a/src/scss/modules/_footer.scss
+++ b/src/scss/modules/_footer.scss
@@ -2,9 +2,20 @@
 //------------------------------------------------------------------------------
 .footer {
 	background-color: $orange;
-	padding: 30px 0;
+	padding: 45px 0 30px;
 	color: $white;
 	position: relative;
+
+	@include media-breakpoint-up(lg) {
+
+		a,
+		button {
+			&:focus {
+				outline: 1px dashed rgba($white, .5);
+			}
+		}
+	}
+
 	@include breakpoint(tablet) {
 		padding: 30px 0 0;
 	}
@@ -49,22 +60,25 @@
 
 	a,
 	span {
-		margin-bottom: 10px;
 		color: $white;
 		font-size: 18px;
 	}
 
 	span {
 		display: block;
+		margin-bottom: 15px;
 	}
 
 	h5 {
 		color: $black;
 		margin-bottom: 15px;
+		text-transform: uppercase;
+		font-weight: $bold;
 	}
 
 	a {
 		display: inline-block;
+		padding-left: 25px;
 		position: relative;
 
 		&::after {
@@ -73,10 +87,18 @@
 			content: '';
 			height: 1px;
 			opacity: 0;
-			left: 0;
+			left: 25px;
 			position: absolute;
 			transition: .3s ease-in-out;
-			width: 100%;
+			width: calc(100% - 25px);
+		}
+
+		&::before {
+			position: absolute;
+			font-family: 'icomoon';
+			left: 0;
+			top: 1px;
+			font-size: 18px;
 		}
 
 		@include hover {
